--- a/app/src/main/res/layouts/shared/layout/toolbar_center_title.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_center_title.xml
@@ -13,8 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textAppearance="@style/text_bold_medium"
-            android:textColor="?android:textColorPrimary" />
+            android:textAppearance="@style/text_bold_medium" />
 
     </android.support.v7.widget.Toolbar>
 </layout>
