--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,18 @@
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
         <item name="android:textColorSecondary">@color/textColorSecondary</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:toolbarStyle">@style/AppTheme.Toolbar</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.Settings" parent="AppTheme.Cobalt">
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+    </style>
+
+    <style name="AppTheme.Toolbar" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:textColorSecondary">@color/textColorSecondary</item>
     </style>
 
     <!-- Cobalt theme -->
@@ -36,8 +42,18 @@
         <item name="android:textColorPrimary">@color/textColorPrimaryCob</item>
         <item name="android:textColorSecondary">@color/textColorSecondaryCob</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:toolbarStyle">@style/AppTheme.Toolbar.Cobalt</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.Toolbar.Cobalt" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorPrimary">@color/textColorPrimaryCob</item>
+        <item name="android:textColorSecondary">@color/textColorSecondaryCob</item>
+    </style>
+
+    <style name="AppTheme.Dialog.Cobalt" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@color/blue</item>
     </style>
 
     <!-- Light Theme -->
@@ -54,9 +70,17 @@
         <item name="android:textColorPrimary">@color/textColorPrimaryLight</item>
         <item name="android:textColorSecondary">@color/textColorSecondaryLight</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:toolbarStyle">@style/AppTheme.Toolbar.Light</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="AppTheme.Toolbar.Light" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorPrimary">@color/textColorPrimaryLight</item>
+        <item name="android:textColorSecondary">@color/textColorSecondaryLight</item>
+    </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
