--- a/app/src/main/res/layouts/activities/layout/activity_login.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_login.xml
@@ -21,6 +21,17 @@
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:visibility="gone"/>
 
+    <Button
+        android:id="@+id/debug_main_login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal|top"
+        android:text="Kevin Main Login"
+        android:textAppearance="@style/text_bold_medium"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:visibility="gone"/>
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
