--- a/app/src/main/res/layouts/shared/layout/toolbar_center_title.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_center_title.xml
@@ -6,6 +6,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        app:initToolbar="@{0}"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
         <TextView
