--- a/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:contentInsetStartWithNavigation="0dp"
+        app:initToolbar="@{0}"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
         <de.hdodenhof.circleimageview.CircleImageView
