--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
         <item name="colorPrimaryDarkTranslucenter">@color/colorPrimaryDarkTranslucenter</item>
         <item name="colorMenuItem">@color/colorMenuItem</item>
         <item name="colorTextMain">@color/textColorPrimary</item>
+        <item name="colorListItem">@color/colorPrimaryDark</item>
+        <item name="colorListItemTranslucent">@color/colorPrimaryDarkTranslucent</item>
         <item name="cardViewBackground">@color/cardViewBackground</item>
         <item name="cardViewHeaderBackground">@color/cardViewHeaderBackground</item>
         <item name="statOpponentColor">@color/statOpponentColor</item>
@@ -40,6 +42,8 @@
         <item name="colorPrimaryDarkTranslucenter">@color/colorPrimaryDarkTranslucenterCob</item>
         <item name="colorMenuItem">@color/colorMenuItemCob</item>
         <item name="colorTextMain">@color/textColorPrimaryCob</item>
+        <item name="colorListItem">@color/colorPrimaryDarkCob</item>
+        <item name="colorListItemTranslucent">@color/colorPrimaryDarkTranslucent</item>
         <item name="cardViewBackground">@color/cardViewBackgroundCob</item>
         <item name="cardViewHeaderBackground">@color/cardViewHeaderBackgroundCob</item>
         <item name="statOpponentColor">@color/statOpponentColorCob</item>
@@ -71,6 +75,8 @@
         <item name="colorPrimaryDarkTranslucenter">@color/colorPrimaryDarkTranslucenterLight</item>
         <item name="colorMenuItem">@color/colorMenuItemLight</item>
         <item name="colorTextMain">@color/textColorPrimaryLight</item>
+        <item name="colorListItem">@color/colorPrimaryLight</item>
+        <item name="colorListItemTranslucent">@color/colorPrimaryLightTranslucent</item>
         <item name="cardViewBackground">@color/cardViewBackgroundLight</item>
         <item name="cardViewHeaderBackground">@color/cardViewHeaderBackgroundLight</item>
         <item name="statOpponentColor">@color/statOpponentColorLight</item>
