--- a/app/src/main/res/layouts/shared/layout/fragment_teams.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_teams.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"/>
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:background="?colorListItem"/>
 
         <include
             layout="@layout/progress"
