--- a/app/src/main/res/layouts/shared/layout/item_date_header.xml
+++ b/app/src/main/res/layouts/shared/layout/item_date_header.xml
@@ -24,7 +24,7 @@
             android:paddingTop="@dimen/date_header_vertical_margin"
             android:textAppearance="@style/text_bold_grey_small"
             android:text="@{date}"
-            android:background="?colorPrimaryDark" />
+            android:background="?colorListItem" />
 
         <View
             android:layout_width="match_parent"
