--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,9 +32,10 @@
     <color name="colorPrimaryDarkLight">#e0e0e0</color>
     <color name="colorPrimaryDarkTranslucentLight">#B2e0e0e0</color>
     <color name="colorPrimaryDarkTranslucenterLight">#92e0e0e0</color>
+    <color name="colorPrimaryLightTranslucent">#B2f5f5f5</color>
     <color name="colorAccentLight">@color/blue</color>
     <color name="cardViewBackgroundLight">@color/colorPrimaryLight</color>
-    <color name="cardViewHeaderBackgroundLight">#eeeeee</color>
+    <color name="cardViewHeaderBackgroundLight">#dddddd</color>
     <color name="statOpponentColorLight">#FF484644</color>
     <color name="textColorPrimaryLight">@android:color/primary_text_light</color>
     <color name="textColorSecondaryLight">@android:color/secondary_text_light</color>
@@ -48,7 +49,7 @@
     <color name="error">@android:color/holo_red_light</color>
     <color name="lighter_black">#212330</color>
     <color name="storm_gray">#717482</color>
-    <color name="gold">#FFD700</color>
+    <color name="gold">#dbb800</color>
     <color name="blue">#42a5f5</color>
     <color name="red_loser">#b92b3c</color>
     <color name="green_winner">#00cc71</color>
