--- a/app/src/main/res/layouts/shared/layout/activity_settings.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_settings.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="?colorPrimaryDark">
+        android:background="?colorListItem">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
