--- a/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
@@ -13,7 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?colorListItem">
 
         <include
             android:id="@+id/create_series_score_summary"
@@ -29,6 +30,7 @@
             android:onItemClickListener="@{listViewModel::onItemClick}"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:background="?colorListItem"
             app:items="@{listViewModel.items}"
             app:itemView="@{listViewModel.itemView}"/>
 
