--- a/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
+++ b/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal"
         android:background="?cardViewBackground"
         android:elevation="@dimen/cardview_default_elevation">
 
@@ -32,7 +31,7 @@
             app:civ_border_width="2dp"
             app:civ_border_color="#FFFFFF"
             app:imageUrl="@{seriesSummaryViewModel.userImageUrl}"/>
-        
+
         <ImageView
             android:layout_width="@dimen/team_item_logo_size"
             android:layout_height="@dimen/team_item_logo_size"
@@ -67,7 +66,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text=" - "
-                android:textAppearance="@style/text_large"/>
+                android:textAppearance="@style/text_large"
+                tools:ignore="HardcodedText" />
 
             <com.robinhood.ticker.TickerView
                 android:id="@+id/opponent_score_ticker"
