--- a/app/src/main/res/layouts/shared/layout/headshot_view.xml
+++ b/app/src/main/res/layouts/shared/layout/headshot_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
         android:id="@+id/headshot_primary_background"
@@ -24,7 +25,8 @@
         android:paddingTop="15dp"
         android:gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        tools:ignore="SpUsage" />
 
     <ImageView
         android:id="@+id/headshot_photo"
