--- a/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
+++ b/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
@@ -16,6 +16,7 @@
         android:id="@+id/seekbar"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
 
 </merge>
