--- a/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
+++ b/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
@@ -3,12 +3,12 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
+        android:layout_weight="0.25"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_vertical|start"
         android:textAppearance="@style/text_small"
         android:textSize="17sp"/>
 
@@ -16,7 +16,7 @@
         android:id="@+id/seekbar"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
         android:layout_gravity="center_vertical"/>
 
 </merge>
