Add more slider logic

--- a/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
@@ -25,8 +25,8 @@
             app:min="@integer/series_length_min"
             app:max="@integer/series_length_max"
             app:step="2"
-            app:start="@{listViewModel.seriesScoreViewModel.defaultSeriesLength}"
-            app:numberChangedListener="@{listViewModel.seriesScoreViewModel}"/>
+            app:start="@{listViewModel.defaultSeriesLength}"
+            app:numberChangedListener="@{listViewModel}"/>
 
         <include
             android:id="@+id/create_series_score_summary"
