--- a/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
+++ b/app/src/main/res/layouts/shared/layout/widget_number_picker.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/text"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.25"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_gravity="center_vertical|start"
-        android:textAppearance="@style/text_small"
-        android:textSize="17sp"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/tiny_margin"
+            android:layout_gravity="center_vertical|start"
+            android:gravity="center"
+            android:textAppearance="@style/text_small"
+            android:textSize="17sp"
+            android:text="@string/series_best_of"/>
+
+        <TextView
+            android:id="@+id/number_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_gravity="center_vertical|start"
+            android:gravity="center"
+            android:textAppearance="@style/text_small"
+            android:textSize="17sp"/>
+
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/seekbar"
