Prevent series slider from dragging below current series length

--- a/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
@@ -26,6 +26,7 @@
             app:max="@integer/series_length_max"
             app:step="2"
             app:start="@{listViewModel.defaultSeriesLength}"
+            app:lowerThreshold="@{listViewModel.minimumSeriesLength}"
             app:numberChangedListener="@{listViewModel}"/>
 
         <include
